<resources>
    <string name="app_name">Body&amp;Beyond</string>
    <string name="txtAppName">BODY &amp; BEYOND</string>
    <string name="btnLogIn">Log In</string>
    <string name="txtEmail">Email</string>
    <string name="txtPwd">Password</string>
    <string name="txtNewPwd">New Password</string>
    <string name="txtConfirmPwd">Confirm Password</string>
    <string name="txtChangePwd">Change Password</string>
    <string name="txtForgetPwd">Forget Password?</string>
    <string name="txtForgetPwdInner">Forget Password</string>
    <string name="txtLogIn">Log In</string>
    <string name="AppName"><![CDATA[BODY & BEYOND]]></string>
    <string name="txtChallenge">Challenge Yourself</string>
    <string name="txtHomeDescription">Start challenging yourself and create a healthy balanced lifestyle for yourself for leading healthy life.</string>
    <string name="imgLogoDescription">BodyBeyondLogo</string>
    <string name="CreateAccount">Create an Account</string>
    <string name="signUptext">Sign up</string>
    <string name="emailText">Please provide your email</string>
    <string name="emailplaceholder">Email</string>
    <string name="continuetext">Continue</string>
    <string name="googleText">Continue with Google</string>
    <string name="facebookText">Continue with Facebook</string>
    <string name="detailsText">Please provide your details</string>
    <string name="nameplaceholder">Name</string>
    <string name="Ageplaceholder">Age</string>
    <string name="GenderText">Gender</string>
    <string name="FemaleText">Female</string>
    <string name="maletext">Male</string>
    <string name="OthersText">Others</string>
    <string name="HeightText">Height in cms</string>
    <string name="WeightText">Weight in Kgs</string>
    <string name="spinnerDefaultText">Activity</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="yourBMI">Your BMI is:</string>
    <string name="calculate">Calculate Again</string>
    <string name="suggestedCal">Suggested Calories intake</string>
    <string name="slash">/</string>
    <string name="steps">Steps</string>
    <string name="burned">Burned</string>
    <string name="cal">cal</string>
    <string name="dietExer">Based on your results, we suggest for you:</string>
    <string name="facebook_app_id">1017641738827269</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">ff50902edd4054d177bc191226bf3ab4</string>
    <string name="btnFBDescrption">Facebook button</string>
    <string name="backBtn">Back Button</string>
    <string name="des">Description</string>
    <string name="txtExerciseTitle">Exercises for transformation</string>
    <string name="imgContentDesc">Back button on Exercise screen</string>
    <string name="exerciseImageDesc">Exercise Images</string>
    <string name="txtExerciseDescription">Exercise Description.</string>
    <string name="exerciseName">Exercise Name</string>
    <string name="imgCalBmi">Calculate BMI Image</string>
    <string name="txtCalBmi">Calculate BMI</string>
    <string name="backBtnReadableLabel">Back Button</string>
    <string name="txtForgotPwd">Forgot Password</string>
    <string name="txtUserPwd">Password</string>
    <string name="googleBtnContentDesc">"Google Button "</string>
    <string name="userNameText">User Name</string>
    <string name="EmailText">User Email</string>
    <string name="app_name_dummy"></string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>
    <string name="changeProfile">Save changes</string>
    <string name="editProfile">editProfileInfo</string>
    <string name="edit">Edit Information</string>
    <string name="client_id">63183385366-5hgqj1mimmuf8q5939d0tfmu7sn4182d.apps.googleusercontent.com</string>
    <string name="stringaboutUs">Body and Beyond have feature to calcute BMI  for knowing the status of the user health, which will show the user’s BMI is normal, overweight and underweight.Calculate user steps for each day to get the calories burned for a day. After getting this information app will show the appropriate exercise and diet.</string>
    <string name="aboutUs">Body and Beyond have feature to calcute BMI  for knowing the status of the user health, which will show the user’s BMI is normal, overweight and underweight.Calculate user steps for each day to get the calories burned for a day. After getting this information app will show the appropriate exercise and diet.</string>
    <string name="exercise">Exercise</string>
    <string name="diets">Diets</string>
</resources>