<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCF4"
    tools:context=".activities.LoginActivity">

    <ImageButton
        android:id="@+id/imgLoginBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:background="#FFFCF4"
        android:contentDescription="@string/backBtn"
        android:labelFor="@id/txtLogin"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509"
        app:srcCompat="@drawable/back"
        tools:ignore="RedundantDescriptionCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtLogIn"
        android:textColor="#A1887F"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toEndOf="@+id/imgLoginBackBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="349dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/txtEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtPwd"
        android:layout_width="353dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@android:color/white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/txtPwd"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#FFE590"
        android:fontFamily="@font/roboto"
        android:hapticFeedbackEnabled="true"
        android:text="@string/btnLogIn"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtforgetPwd"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageViewOr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/imgContentDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
        app:srcCompat="@drawable/or"
        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:background="#DB4437"
        android:backgroundTintMode="add"
        android:contentDescription="@string/googleBtnContentDesc"
        android:text="@string/googleText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewOr"
        tools:ignore="TextContrastCheck,RedundantDescriptionCheck" />

    <Button
        android:id="@+id/buttonFacebook"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:background="#4267B2"
        android:backgroundTintMode="add"
        android:contentDescription="@string/btnFBDescrption"
        android:text="@string/facebookText"
        android:textColor="#EDE7F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/txtforgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/txtForgetPwd"
        android:textColor="#8D6E63"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPwd" />

</androidx.constraintlayout.widget.ConstraintLayout>