<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpDetails"
    android:background="@color/light_yellow">

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/actionModeBackground"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/nameplaceholder"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewdetailsheading" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/actionModeBackground"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/Ageplaceholder"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextName" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/actionModeBackground"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/HeightText"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/actionModeBackground"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/WeightText"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeight" />

    <TextView
        android:id="@+id/textViewdetailsheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/detailsText"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBackDetails" />

    <EditText
        android:id="@+id/txtUserPwd"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/actionModeBackground"
        android:ems="10"
        android:hint="@string/txtPwd"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerActivity" />

    <ImageButton
        android:id="@+id/imageButtonBackDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_yellow"
        android:contentDescription="@string/backBtn"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textViewsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signUptext"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageButtonBackDetails"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:checked="false"
            android:text="@string/FemaleText"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:checked="true"
            android:text="@string/maletext"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/GenderText"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <Spinner
        android:id="@+id/spinnerActivity"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/actionModeBackground"
        android:contentDescription="@string/des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@color/yellow"
        android:text="@string/signUptext"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserPwd"
        app:rippleColor="@color/font_secondary"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />
</androidx.constraintlayout.widget.ConstraintLayout>