<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exercisesLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exerciseName"
        android:padding="5dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/exerciseListImageViewId"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#EFEFEF"
        android:contentDescription="@string/exerciseImageDesc"
        app:srcCompat="@drawable/cardio_light_mountain"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtExerciseDescId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:hint="@string/txtExerciseDescription"
        android:padding="5dp"
        android:textColorHint="#757575"
        android:textSize="14sp" />
    android:layout_marginTop="10dp"/>
</LinearLayout>